[project]
name = "text-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.34.3",
    "ipykernel>=6.30.0",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0"
]
